[add_cpu_driver] interrupts are (kind of) working

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -4,4 +4,6 @@ KERNEL_ARCH_LDFLAGS=
 KERNEL_ARCH_LIBS=
 
 KERNEL_ARCH_OBJS=\
-	$(ARCHDIR)/display.o
+	$(ARCHDIR)/display.o \
+	$(ARCHDIR)/cpu.o \
+	$(ARCHDIR)/interrupt/default.o 
