[add_cpu_driver] added driver for 8254 PIT

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -7,6 +7,7 @@ KERNEL_ARCH_OBJS=\
 	$(ARCHDIR)/display.o \
 	$(ARCHDIR)/cpu.o \
 	$(ARCHDIR)/pic.o \
+	$(ARCHDIR)/timer.o \
 	$(ARCHDIR)/interrupt/i386_exception.o \
 	$(ARCHDIR)/interrupt/i386_defaulthandler.o \
 	$(ARCHDIR)/interrupt/i386_aligncheck.o \
@@ -28,4 +29,5 @@ KERNEL_ARCH_OBJS=\
 	$(ARCHDIR)/interrupt/i386_segnotpresent.o \
 	$(ARCHDIR)/interrupt/i386_simdexception.o \
 	$(ARCHDIR)/interrupt/i386_stacksegfault.o \
-	$(ARCHDIR)/interrupt/i386_virtualizeexception.o
+	$(ARCHDIR)/interrupt/i386_virtualizeexception.o \
+	$(ARCHDIR)/interrupt/timer_irq.o
