[add_memory_manager] added paging manager routines. initial kernel break can now be set. need to finish the kernel brk and sbrk routines so that the kernel can get additional memory on-demand

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -10,6 +10,7 @@ KERNEL_ARCH_OBJS=\
 	$(ARCHDIR)/timer.o \
 	$(ARCHDIR)/memory.o \
 	$(ARCHDIR)/balloc.o \
+	$(ARCHDIR)/pagemngr.o \
 	$(ARCHDIR)/asm/i386_exception.o \
 	$(ARCHDIR)/asm/i386_defaulthandler.o \
 	$(ARCHDIR)/asm/i386_aligncheck.o \
