[add_serial_driver] added basic chrdev interface and rs232 serial port driver. kernel now includes basic runtime routine to allow the user to type characters via the serial interface

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -11,6 +11,7 @@ KERNEL_ARCH_OBJS=\
 	$(ARCHDIR)/memory.o \
 	$(ARCHDIR)/balloc.o \
 	$(ARCHDIR)/pagemngr.o \
+	$(ARCHDIR)/serial.o \
 	$(ARCHDIR)/asm/i386_exception.o \
 	$(ARCHDIR)/asm/i386_defaulthandler.o \
 	$(ARCHDIR)/asm/i386_aligncheck.o \
@@ -33,4 +34,5 @@ KERNEL_ARCH_OBJS=\
 	$(ARCHDIR)/asm/i386_simdexception.o \
 	$(ARCHDIR)/asm/i386_stacksegfault.o \
 	$(ARCHDIR)/asm/i386_virtualizeexception.o \
-	$(ARCHDIR)/asm/timer_irq.o
+	$(ARCHDIR)/asm/timer_irq.o \
+	$(ARCHDIR)/asm/serial_irq.o
