--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -31,6 +31,10 @@ LIBS:=$(LIBS) $(KERNEL_ARCH_LIBS)
 
 NASM=nasm
 
+SERIAL_TERMINAL_OBJS=\
+	kernel/serialterm/serial_terminal.o \
+	kernel/serialterm/builtin_commands.o \
+
 KERNEL_OBJS=\
 $(KERNEL_ARCH_OBJS) \
 $(KERNEL_INIT_OBJS) \
@@ -39,6 +43,7 @@ $(KERNEL_INIT_OBJS) \
 	kernel/itoa.o \
 	kernel/chrdev.o \
 	kernel/version.o \
+$(SERIAL_TERMINAL_OBJS) \
 
 OBJS=\
 $(ARCHDIR)/crti.o \
