[add-simple-processes] kernel can now execute functions stored in a process list

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -39,6 +39,7 @@ $(KERNEL_INIT_OBJS) \
 	kernel/itoa.o \
 	kernel/chrdev.o \
 	kernel/version.o \
+	kernel/process.o \
 
 OBJS=\
 $(ARCHDIR)/crti.o \
