[add-simple-processes] OS can now jump into user mode and execute basic system calls"

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -35,6 +35,4 @@ KERNEL_ARCH_OBJS=\
 	$(ARCHDIR)/asm/i386_stacksegfault.o \
 	$(ARCHDIR)/asm/i386_virtualizeexception.o \
 	$(ARCHDIR)/asm/timer_irq.o \
-	$(ARCHDIR)/asm/serial_irq.o \
-	$(ARCHDIR)/asm/enter_usermode.o \
-	$(ARCHDIR)/asm/syscall.o
+	$(ARCHDIR)/asm/serial_irq.o
